fix: adjust the retry interface to be universal
