# internal/application/router/api-v3/node/workflow/workflow.go
@@ -56,6 +56,8 @@ func Load(rg *gin.RouterGroup, capability *options.Capability) {
 	h.rg.POST("/operation/list", rest.RestHandlerFunc(h.ListOperation))
 	h.rg.POST("/operation/instance/list", rest.RestHandlerFunc(h.ListOperationInstance))
 	h.rg.POST("/operation/instance/log/get", rest.RestHandlerFunc(h.GetOperationInstanceLog))
+	h.rg.POST("/operation/retry", rest.RestHandlerFunc(h.OperationRetry))
+
 }
 
 // List workflows.
@@ -333,6 +335,36 @@ func (h *handler) GetOperationInstanceLog(ctx *rest.Context) (interface{}, error
 	resp := new(protoApplication.NodeWorkflowOperationInstanceLogGetResp)
 
 	resp.ConvertResultFromTypes(logs)
+
+	return resp.GetData(), nil
+}
+
+func (h *handler) OperationRetry(ctx *rest.Context) (interface{}, error) {
+	sCtx, err := ctx.GetContext()
+	if err != nil {
+		h.logger.Errorf("failed to retry operation, failed to get request context. err: %v", err)
+		return nil, errf.ErrWrap(errf.InvalidParameter, err)
+	}
+
+	req := new(protoApplication.NodeWorkflowOperationRetryReq)
+	if err := ctx.BindJSON(req); err != nil {
+		h.logger.ErrorCtxf(sCtx, "failed to retry operation, failed to decode request body. err: %v", err)
+		return nil, errf.ErrWrap(errf.InvalidParameter, err)
+	}
+
+	if err := req.Validate(); err != nil {
+		h.logger.ErrorCtxf(sCtx, "failed to retry operation, failed to validate request body. err: %v", err)
+		return nil, errf.ErrWrap(errf.InvalidParameter, err)
+	}
+
+	InstanceIDs, err := h.backendHandler.OperationRetry(sCtx, req.ConvertRetryParamToTypes())
+	if err != nil {
+		h.logger.ErrorCtxf(sCtx, "failed to retry operation: %v", err)
+		return nil, err
+	}
+	resp := new(protoApplication.NodeWorkflowOperationRetryResp)
+
+	resp.ConvertOperInstanceID(InstanceIDs)
 
 	return resp.GetData(), nil
 }
