# internal/backend/router/api-v3/node/agent/agent.go
@@ -53,5 +53,4 @@ func Load(rg *gin.RouterGroup, capability *options.Capability) {
 	h.rg.POST("/reconfig", rest.RestHandlerFunc(h.AgentReConfig))
 	h.rg.POST("/restart", rest.RestHandlerFunc(h.AgentRestart))
 	h.rg.POST("/uninstall", rest.RestHandlerFunc(h.AgentUninstall))
-	h.rg.POST("/operation/retry", rest.RestHandlerFunc(h.AgentOperationRetry))
 }
