# pkg/proto/backend/api/v3/node_agent.go
@@ -181,40 +181,3 @@ func (x *NodeAgentUpgradeReq) AutoConvert() {
 func (x *NodeAgentUpgradeResp) ConvertWorkflowID(workflowID string) {
 	x.Data = &NodeAgentUpgradeResp_Data{WorkflowId: workflowID}
 }
-
-// AutoConvert auto convert.
-func (x *NodeAgentOperationRetryReq) AutoConvert() {
-	//
-}
-
-// Validate convert workflow id.
-func (x *NodeAgentOperationRetryReq) Validate() error {
-	if x.GetWorkflowId() == "" {
-		return errors.New("workflow_id is required")
-	}
-
-	for _, oper := range x.GetOperationId() {
-		if oper == "" {
-			return errors.New("operation_id can not be empty")
-		}
-	}
-
-	return nil
-}
-
-// ConvertOperationRetryParamFromTypes ...
-func (x *NodeAgentOperationRetryReq) ConvertOperationRetryParamFromTypes(retryParm types.NodeOperationRetryParam) {
-	x.WorkflowId = retryParm.WorkflowID
-	x.OperationId = retryParm.OperationIDs
-	x.RetryMod = string(retryParm.RetryMode)
-}
-
-// ConvertOperInstanceID convert OperationInstance id.
-func (x *NodeAgentOperationRetryResp) ConvertOperInstanceID(operInstance []string) {
-	x.Data = &NodeAgentOperationRetryResp_Data{InstanceIds: operInstance}
-}
-
-// ConvertResultFromTypes convert result from types.
-func (x *NodeAgentOperationRetryResp) ConvertResultToComm() []string {
-	return x.GetData().GetInstanceIds()
-}
